--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,18 +1,36 @@
-<!--
-  Generated template for the LoginPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>login</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
-<ion-content padding>
-
+<ion-content>
+	<div class="main-slogan">
+		<div class="logo">
+			<i class="iconfont">&#xe65f;</i>
+		</div>
+		<h1>欢迎使用不丢客</h1>
+		<h2>帮你跟好客户，一个都不能丢。</h2>
+	</div>
+	<div class="main-form login-form">
+		<form #loginForm="ngForm" novalidate (ngSubmit)="login()">
+			<ion-item>
+				<ion-label>
+					<i class="iconfont">&#xe65e;</i>
+				</ion-label>
+				<ion-input type="tel" placeholder="请输入您的手机/400号码"></ion-input>
+			</ion-item>
+			<ion-item>
+				<ion-label>
+					<i class="iconfont">&#xe65c;</i>
+				</ion-label>
+				<ion-input type="tel" placeholder="请输入您的手机/400号码"></ion-input>
+			</ion-item>
+			<button class="login submit" type="submit" [disabled]="loginForm.invalid" ion-button block round>登录</button>
+			<p class="new-user">新用户？<a>注册</a></p>
+			<div class="forget-paw">
+				<div class="agreement">
+					<ion-item>
+						<ion-checkbox [(ngModel)]="mushrooms" name="agreement"></ion-checkbox>
+						<ion-label>用户协议</ion-label>
+					</ion-item>
+				</div>
+				<span>忘记密码</span>
+			</div>
+		</form>
+	</div>
 </ion-content>
