--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -14,4 +14,6 @@
     Take a look at the <code>src/pages/</code> directory to add or change tabs,
     update any existing page or create new pages.
   </p>
+  <button ion-button (click)="presentProfileModal()">Button</button>
+  <button ion-button (click)="actionSheet()">action</button>
 </ion-content>
