--- a/src/pages/remind/remind/remind.html
+++ b/src/pages/remind/remind/remind.html
@@ -192,7 +192,7 @@
 			<i class="iconfont">&#xe66e;</i>
 			<span>删除</span>
 		</div>
-		<div class="check-all">
+		<div class="check-all active">
 			<i class="iconfont">&#xe640;</i>
 			<span>全选</span>
 		</div>
