--- a/src/pages/login/login/login.html
+++ b/src/pages/login/login/login.html
@@ -19,6 +19,9 @@
 					<i class="iconfont">&#xe65c;</i>
 				</ion-label>
 				<ion-input type="tel" placeholder="请输入您的手机/400号码"></ion-input>
+				<div class="btn-wrapper" item-end>
+					<button ion-button block round>获取验证码</button>
+				</div>
 			</ion-item>
 			<button class="login submit" type="submit" [disabled]="loginForm.invalid" ion-button block round>登录</button>
 			<p class="new-user">新用户？<a>注册</a></p>
