--- a/src/pages/remind/remind/remind.html
+++ b/src/pages/remind/remind/remind.html
@@ -5,7 +5,7 @@
 			<i class="iconfont">&#xe675;</i>
 		</div>
 		<!-- <div class="hint"> 点击返回今天 </div> -->
-		<ion-buttons end="end">
+		<ion-buttons end>
 			<button ion-button="ion-button" icon-only="icon-only">
 				<i class="iconfont">&#xe66e;</i>
 			</button>
